--- a/specificLocation.css
+++ b/specificLocation.css
@@ -2,9 +2,9 @@ body {
   margin: 0;
   font-family: "Noto Sans", sans-serif;
   background-color: #FCF7F0;
-  
-  height: 100vh;
-  width: 100vw;
+   min-height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .navbar {
